first prototype
feat: mongodb collections `users`, `numbers`
feat: passport-local authentication
feat: redis session storage
feat: routes POST /registration, POST/login
feat: routes POST /generate, GET /public, GET /private

test: all routes

ci: creation and deletion scripts
